<resources>
    <string name="app_name">Desafio03-DH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">LOG IN</string>
    <string name="remeber">Remeber</string>
    <string name="Welcome">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="save">SAVE</string>
    <string name="marvel">MARVEL</string>
    <string name="published">Published:</string>
    <string name="price">Price:</string>
    <string name="pages">Pages:</string>
</resources>