<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".login.view.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:clickable="false"
        android:focusable="false"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/dimen_8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/Welcome"
                android:textColor="@color/colorBranco"
                android:textSize="@dimen/dimen_22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:background="@color/colorBranco"
                android:clickable="false"
                android:focusable="false"
                app:cardCornerRadius="@dimen/dimen_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_16"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        app:hintTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmail_fLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorBranco"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorCinzaDark" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:hintTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword_fLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorBranco"
                            android:inputType="textPassword"
                            android:textColor="@color/colorCinzaDark" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/remeber"
                        android:textColor="@color/colorCinzaAlt"
                        app:buttonTint="@color/colorPrimary" />

                    <Button
                        android:id="@+id/btnLogin_fLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_15"
                        android:background="@color/colorPrimary"
                        android:text="@string/log_in"
                        android:textColor="@color/colorBranco" />

                    <Button
                        android:id="@+id/btnSign_fLogin"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/create_account"
                        android:textAllCaps="false"
                        android:textColor="@color/colorCinzaAltDark" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>