<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".menu.view.DetalheRevistaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgPersonagem_fDetalheRevista"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_250"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgReturn_fDetalheRevista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="@+id/imgPersonagem_fDetalheRevista"
                app:layout_constraintTop_toTopOf="@+id/imgPersonagem_fDetalheRevista" />

            <ImageView
                android:id="@+id/imgCapaRevista_fDetalheRevista"
                android:layout_width="@dimen/dimen_140"
                android:layout_height="@dimen/dimen_180"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_100"
                android:background="@color/colorBranco"
                android:cropToPadding="true"
                android:padding="@dimen/dimen_2"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="@+id/imgPersonagem_fDetalheRevista"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTitulo_fDetalheRevista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_40"
                android:layout_marginEnd="@dimen/dimen_10"
                android:textColor="@color/colorBranco"
                android:textSize="@dimen/dimen_20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgPersonagem_fDetalheRevista" />

            <TextView
                android:id="@+id/txtTexto_fDetalheRevista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_10"
                android:gravity="start"
                android:textColor="@color/colorBranco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitulo_fDetalheRevista" />

            <TextView
                android:id="@+id/txtPublished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/published"
                android:textColor="@color/colorBranco"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTexto_fDetalheRevista" />

            <TextView
                android:id="@+id/txtPublicacao_fDetalheRevista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5"
                android:textColor="@color/colorBranco"
                app:layout_constraintStart_toEndOf="@id/txtPublished"
                app:layout_constraintTop_toTopOf="@id/txtPublished" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/price"
                android:textColor="@color/colorBranco"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPublicacao_fDetalheRevista" />

            <TextView
                android:id="@+id/txtPrice_fDetalheRevista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_10"
                android:textColor="@color/colorBranco"
                app:layout_constraintStart_toEndOf="@+id/txtPrice"
                app:layout_constraintTop_toBottomOf="@id/txtPublicacao_fDetalheRevista" />

            <TextView
                android:id="@+id/txtPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/pages"
                android:textColor="@color/colorBranco"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPrice_fDetalheRevista" />

            <TextView
                android:id="@+id/txtPage_fDetalheRevista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:textColor="@color/colorBranco"
                app:layout_constraintStart_toEndOf="@+id/txtPage"
                app:layout_constraintTop_toTopOf="@+id/txtPage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>